# my-chat

./: .env.example  docker-compose.yml
.github/workflows/: docker-build.yml
ansible/: inventory.yml  playbook.yml
ansible/group_vars/all/: vars.yml
ansible/templates/: my-chat.service.j2
server/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
server/scripts/: dropbox_auth.py
server/src/agent/: dropbox_sync.py  graph.py  ingest.py  vectorstore.py
terraform/: cloud-init.yml  main.tf  outputs.tf  variables.tf
terraform/.terraform/: terraform.tfstate
web/: Dockerfile  package-lock.json  package.json
web/app/: assistant.tsx  globals.css  layout.tsx  page.tsx
web/components/assistant-ui/: thread.tsx  threadlist-sidebar.tsx
web/lib/: chatApi.ts  langGraphAdapter.ts
